Fix yet another viewbox scaling issue, for render to bounds

The recent introduction of keepAspectRation scaling led to wrong
output (outside bounds) in the case of an explicitly specified target
bounds rect, i.e. QSVGRenderer::render(QPainter *p, QRectF bounds).

Fix by reverting to old code path in this case, i.e. allow the user to
override the keepAspectRatio behavior by explicitly specifying target
bounds.

As a driveby, also fix the keepAspectRatio code path in case of a
target rect having non-zero x/y coordinates. Now the fix above means
that this will never happen in the code as it stands, but it may come
in handy later.

[ChangeLog][QSVGRenderer] From Qt 5.14.0, normal rendering will keep
aspect ratio implied by the viewbox. The render() methods taking an
explicit target bounds QRectF parameter can now be used to override
that behavior. They will scale the output to the bounds while ignoring
aspect ratio, as was the default rendering prior to 5.14.0.

Fixes: QTBUG-80888
Change-Id: I399b05ca50d290b8e4b01bdc47b5b6f74c890c9a
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>